<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Octopus</string>
    <string name="action_settings">Настройки</string>
    <string name="action_bookmarks">Закладки</string>
    <string name="action_history">История</string>
    <string name="action_claim">Пожаловаться</string>
    <string name="action_purge_history">Очистить историю</string>
    <string name="action_purge_bookmarks">Удалить все закладки</string>
    <string name="title_latest">Последние добавленные</string>
    <string name="title_alphabet">По алфавиту</string>
    <string name="title_genres">Жанры</string>
    <string name="title_bookmarks">Закладки</string>
    <string name="title_history">История</string>
    <string name="title_series_info">Сериал</string>
    <string name="title_series_episodes">Эпизоды</string>
    <string name="action_search">Поиск</string>
    <string name="search_hint">Введите название сериала</string>
    <string name="operation_loading">Загрузка</string>
    <string name="operation_sending">Отправка</string>
    
    
    <!-- Dialogs -->
    <string name="dialog_purge_history_header">Очистить историю?</string>
    <string name="dialog_purge_history_title">Вся история просмотра будет удалена!</string>
    <string name="dialog_purge_ok">Очистить</string>
    
    <string name="dialog_purge_bookmarks_header">Очистить список закладок?</string>
    <string name="dialog_purge_bookmarks_title">Все закладки будут удалены!</string>
    
    <string name="dialog_series_videolist_title">Выберите источник видео</string>
    <string name="dialog_series_videolist_vk">Вконтакте (MP4)</string>
    <string name="dialog_series_videolist_hls">Moonwalk (HLS)</string>
    
    <string name="dialog_series_claim_title">Опишите ошибку в контенте</string>
    <string name="dialog_series_claim_hint">Например: видео недоступно или не соответствует сериалу,
        сериал неверно распознан и т.д.</string>
    <string name="dialog_series_claim_send">Отправить</string>
    
    <!-- Toasts -->
    <string name="toast_bookmarks_added">Сериал добавлен в закладки</string>
    <string name="toast_bookmarks_removed">Сериал удален из закладок</string>
    
    
    <!-- Preferences -->
    <string name="pref_category">Основные</string>
    <string name="pref_domain_title">Адрес сервера</string>
    <string name="pref_domain_summary">Адрес, по которому находятся данные</string>
    <string name="pref_domain_value">192.168.1.106:1337</string>
	<string name="pref_api_latest_value">/api/latest?json=1</string>
	<string name="pref_cast_app_id">7248F534</string>
        
    
        
        <!-- Errors -->
    <string name="error_download_fail">Невозможно открыть страницу.</string>
    <string name="error_unknown">Произошла неизвестная ошибка.</string>
    <string name="error_json_parse">Ошибка во время чтения страницы. Попробуйте перезагрузить.</string>
    <string name="error_search_null">Поиск ничего не нашел =(</string>
    <string name="error_create_request">Невозможно выполнить запрос к странице.</string>
    <string name="error_read_response">Невозможно прочитать ответ сервера.</string>
    <string name="error_no_api_available">Отсутствует этот метод обращения к JSON API.</string>
    <string name="error_list_empty">Список пуст.</string>
    <string name="error_no_direct_video_url">Не удалось получить видео.</string>
    
    <string name="error_list_history_empty">В истории пока ничего нет.</string>
    <string name="error_list_bookmarks_empty">Список закладок пуст. Добавьте закладки со страницы любого сериала</string>
    
</resources>
