<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    
        <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
       <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="always"
          app:actionViewClass="android.support.v7.widget.SearchView"></item>
       

       <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_bookmarks"/>
       
       <item
        android:id="@+id/action_history"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_history"/>
       
       <item
        android:id="@+id/action_claim"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_claim"/>

</menu>
